[US5] (Rachel) Fixed notes wrapping for extra long text

--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -234,11 +234,8 @@ a:hover {
   }
 
   .recipe-title{
-    position: absolute;
     width: 411px;
     height: 48px;
-    left: 88px;
-    top: 152px;
     font-weight: 800;
     font-size: 30px;
     line-height: 125.29%;
@@ -357,6 +354,16 @@ a:hover {
   order: 0;
   align-self: stretch;
   flex-grow: 0;
+}
+
+.notes-font{
+  width: 304px;
+  height: 270px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+  color: #0671B7;
 }
 
 .ingredients-box{
